--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
   <div class="icon">
     <img src="img/ruby_froscon_logo-big.png" width="477">
   </div>
-  <h1>Ruby <span>meets</span> FrOSCon <span>2013</span></h1>
+  <h1><span class="ruby">Ruby</span> meets <span class="froscon">FrOSCon</span> 2013</h1>
   <h2>First Ruby-Subconference at the FrOSCon</h2>
 </div>
 </section>
@@ -358,33 +358,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="span6">
-      <h4><i class="icon-envelope"></i><strong>Contact form</strong></h4>
-      <p>
-        Want to work with us or just want to say hello? Don't hesitate to get in touch!
-      </p>
-      <!-- start contact form -->
-      <form id="contactform" action="#" method="post" class="contact-form" name="contact-form">
-        <ul class="contact-list">
-          <li>
-          <label>Name <span>*</span></label>
-          <input type="text" class="form_input" id="name" name="name" placeholder="Your name" />
-          <li>
-          <label>Email <span>*</span></label>
-          <input type="text" class="form_input" name="email" id="email" placeholder="Your email" />
-          </li>
-          <li>
-          <label>Your message <span>*</span></label>
-          <textarea name="message" id="message" rows="12" class="form_textarea" placeholder="Your message"></textarea>
-          </li>
-          <li class="last">
-          <button class="btn btn-large btn-theme" type="submit" id="send">Send a message</button>
-          </li>
-        </ul>
-      </form>
-      <!-- end contact form -->
-    </div>
-    <div class="span6">
+    <div class="span6 offset3">
       <h4><i class="icon-suitcase"></i><strong>Our office</strong></h4>
       <p>
          Feel free to ask if you have any question regarding our services or if you just want to say Hello, we would love to hear from you.
@@ -423,6 +397,7 @@
 </div>
 </section>
 <!-- end section contact -->
+
 <footer>
 <div class="verybottom">
   <div class="container">
@@ -443,7 +418,9 @@
   </div>
 </div>
 </footer>
+
 <a href="#" class="scrollup"><i class="icon-chevron-up icon-square icon-48 active"></i></a>
+
 <!-- javascript -->
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery.easing.js"></script>
