--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
         <ul class="nav pull-right">
           <li class="current"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Schedule</a></li>
-          <li><a href="#works">Call for Papers</a></li>
-          <li><a href="#contact">Location</a></li>
+          <li><a href="#schedule">Schedule</a></li>
+          <li><a href="#call-for-papers">Call for Papers</a></li>
+          <li><a href="#location">Location</a></li>
         </ul>
         </nav>
       </div>
@@ -101,8 +101,8 @@
 </section>
 <!-- end section about -->
 
-<!-- section services -->
-<section id="services" class="section parallax dark">
+<!-- section schedule -->
+<section id="schedule" class="section parallax dark">
 <div class="container">
   <div class="row">
     <div class="span12">
@@ -168,15 +168,15 @@
   </div>
 </div>
 </section>
-<!-- end section services -->
+<!-- end section schedule -->
 
-<!-- section works -->
-<section id="works" class="section gray-bg">
+<!-- section call-for-papers -->
+<section id="call-for-papers" class="section gray-bg">
 <div class="container">
   <div class="row">
     <div class="span12">
       <div class="heading">
-        <h3><span>Recent works</span></h3>
+        <h3><span>Call for Papers</span></h3>
       </div>
       <div class="sub-heading">
         <p>
@@ -331,14 +331,14 @@
   </div>
 </div>
 </section>
-<!-- section works -->
-<!-- section contact -->
-<section id="contact" class="section">
+<!-- section call-for-papers -->
+<!-- section location -->
+<section id="location" class="section">
 <div class="container">
   <div class="row">
     <div class="span12">
       <div class="heading">
-        <h3><span>Get in touch</span></h3>
+        <h3><span>location</span></h3>
       </div>
       <div class="sub-heading">
         <p>
@@ -361,7 +361,7 @@
     <div class="span6 offset3">
       <h4><i class="icon-suitcase"></i><strong>Our office</strong></h4>
       <p>
-         Feel free to ask if you have any question regarding our services or if you just want to say Hello, we would love to hear from you.
+         Feel free to ask if you have any question regarding our schedule or if you just want to say Hello, we would love to hear from you.
       </p>
       <div class="dotted_line">
       </div>
@@ -375,7 +375,7 @@
         <span><i class="icon-phone"></i><strong>Phone:</strong> +6221 999 888 77 or +6221 999 888 66</span>
       </p>
       <p>
-        <span><i class="icon-comment"></i><strong>Skype:</strong> vesperr.contact</span>
+        <span><i class="icon-comment"></i><strong>Skype:</strong> vesperr.location</span>
       </p>
       <p>
         <span><i class="icon-envelope-alt"></i><strong>Email:</strong> info@yourdomainname.com</span>
@@ -396,7 +396,7 @@
   </div>
 </div>
 </section>
-<!-- end section contact -->
+<!-- end section location -->
 
 <footer>
 <div class="verybottom">
