--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,6 @@
 <link href="css/reset.css" rel="stylesheet" />
 <link href="css/bootstrap.css" rel="stylesheet" />
 <link href="css/bootstrap-responsive.css" rel="stylesheet" />
-<link href="css/prettyPhoto.css" rel="stylesheet" />
-<link href="css/animate.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
 <link href="color/default.css" rel="stylesheet" />
 <link href="css/custom.css" rel="stylesheet" />
@@ -36,8 +34,8 @@
   <div class="navbar-inner">
     <div class="container">
       <div class="title">
-        <a href="/">
-          Ruby FrOSCon Subconference 2013
+        <a href="http://ruby.froscon.org">
+          RedFrog Conf 2013
         </a>
       </div>
       <div class="navigation">
@@ -64,8 +62,8 @@
   <div class="icon">
     <img src="img/ruby_froscon_logo-big.png" width="477">
   </div>
-  <h1><span class="ruby">Ruby</span> meets <span class="froscon">FrOSCon</span> 2013</h1>
-  <h2>First Ruby-Subconference at the FrOSCon</h2>
+  <h1><span class="ruby">Red</span><span class="froscon">Frog</span> Conf 2013</h1>
+  <h2>Ruby meets FrOSCon - Ruby Subkonferenz auf der FrOSCon 8</h2>
 </div>
 </section>
 <!-- end intro -->
@@ -111,61 +109,209 @@
       </div>
       <div class="sub-heading">
         <p>
-           We have a history of doing what our name implies, creating a visual language around the beliefs of the brands we work with.
+          Hier könnt ihr schon mal sehen, welche Slots es auf der Konferenz geben wird. Wir richten uns im Grunde an die
+          Zeiten der FrOSCon und werden zu den allgemeinen Veranstaltungen kein Programm machen. Sobald die Talks
+          feststehen, werden wir die Themen hier natürlich eintragen.
         </p>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="span3">
+    <div class="span5 offset2">
       <div class="box aligncenter">
-        <div class="halftop">
-          <h4><strong>User interface</strong></h4>
-          <i class="icon-desktop icon-4x"></i>
-        </div>
-        <p>
-           Lorem ipsum dolor sit amet, eum no latine delectus deserunt diam
-        </p>
-        <a href="#" class="btn btn-theme">Learn more</a>
+        <h4>Tag 1</h4>
       </div>
     </div>
-    <div class="span3">
+    <div class="span5">
       <div class="box aligncenter">
-        <div class="halftop">
-          <h4><strong>Content management</strong></h4>
-          <i class="icon-briefcase icon-4x"></i>
-        </div>
-        <p>
-           Lorem ipsum dolor sit amet, eum no latine delectus deserunt diam
-        </p>
-        <a href="#" class="btn btn-theme">Learn more</a>
-      </div>
-    </div>
-    <div class="span3">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><strong>Mobile application</strong></h4>
-          <i class="icon-mobile-phone icon-4x"></i>
-        </div>
-        <p>
-           Lorem ipsum dolor sit amet, eum no latine delectus deserunt diam
-        </p>
-        <a href="#" class="btn btn-theme">Learn more</a>
-      </div>
-    </div>
-    <div class="span3">
-      <div class="box aligncenter">
-        <div class="halftop">
-          <h4><strong>Web design</strong></h4>
-          <i class="icon-beaker icon-4x"></i>
-        </div>
-        <p>
-           Lorem ipsum dolor sit amet, eum no latine delectus deserunt diam
-        </p>
-        <a href="#" class="btn btn-theme">Learn more</a>
+        <h4>Tag 2</h4>
       </div>
     </div>
   </div>
+
+  <!-- 10:30 - 11:00 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          10:30 - 11:00
+        </span>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Eröffnungsevent</strong></h4>
+        </div>
+        <p>
+          Nachdem offiziellen Start der FrOSCon werden wir gemeinsam die RedFrog Conf beginnen.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- 11:15 - 12:15 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          11:15 - 12:15
+        </span>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #1</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #6</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- 12:15 - 14:00 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          12:15 - 14:00
+        </span>
+      </div>
+    </div>
+    <div class="span10">
+      <div class="box aligncenter">
+        <h4><strong>Mittagspause</strong></h4>
+      </div>
+    </div>
+  </div>
+
+  <!-- 14:00 - 15:00 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          14:00 - 15:00
+        </span>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #2</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #7</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- 15:15 - 16:15 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          15:15 - 16:15
+        </span>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #3</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #8</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- 16:30 - 17:30 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          15:15 - 16:15
+        </span>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #4</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #9</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- 17:45 - 18:45 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          17:45 - 18:45
+        </span>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>Slot #5</strong></h4>
+        </div>
+        <p>TBA</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Ab 19:00 -->
+  <div class="row">
+    <div class="span2">
+      <div class="box aligncenter">
+        <span class="timeslot">
+          Ab 19:00
+        </span>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><strong>FrOSCon Party</strong></h4>
+        </div>
+        <p>Gefeiert wird natürlich zusammen!</p>
+      </div>
+    </div>
+  </div>
+
 </div>
 </section>
 <!-- end section schedule -->
@@ -185,153 +331,10 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="span12">
-      <ul class="filter">
-        <li class="all active"><a href="#" class="btn btn-theme">All categories</a></li>
-        <li class="web"><a href="#" class="btn btn-theme">Web design</a></li>
-        <li class="brand"><a href="#" class="btn btn-theme">Brand identity</a></li>
-        <li class="graphic"><a href="#" class="btn btn-theme">Graphic design</a></li>
-      </ul>
-      <div class="clear">
-      </div>
-      <div class="row">
-        <ul class="portfolio-area da-thumbs">
-          <li class="portfolio-item" data-id="id-0" data-type="web">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img1.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-          <li class="portfolio-item" data-id="id-0" data-type="web">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img2.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-          <li class="portfolio-item" data-id="id-0" data-type="brand">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img3.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-          <li class="portfolio-item" data-id="id-0" data-type="photo">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img4.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-          <li class="portfolio-item" data-id="id-0" data-type="graphic">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img5.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-          <li class="portfolio-item" data-id="id-0" data-type="graphic">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img6.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-          <li class="portfolio-item" data-id="id-0" data-type="photo">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img7.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-          <li class="portfolio-item" data-id="id-0" data-type="ilustrator">
-          <div class="span3">
-            <div class="thumbnail">
-              <div class="image-wrapp">
-                <img src="img/portfolio/img8.jpg" alt="Portfolio name" title="" />
-                <article class="da-animate da-slideFromRight" style="display: block;">
-                <h5><strong>Portfolio name</strong></h5>
-                <a href="#"><i class="icon-rounded icon-48 icon-link"></i></a>
-                <span><a class="zoom" data-pretty="prettyPhoto" href="img/portfolio/big1.jpg">
-                <i class="icon-rounded icon-48 icon-zoom-in"></i>
-                </a></span>
-                </article>
-              </div>
-            </div>
-          </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </div>
 </section>
 <!-- section call-for-papers -->
+
 <!-- section location -->
 <section id="location" class="section">
 <div class="container">
@@ -342,7 +345,8 @@
       </div>
       <div class="sub-heading">
         <p>
-           Lorem ipsum dolor sit amet, mutat paulo simul per no, assum fastidii vituperata eam no.
+          Die RedFrog Conf 2013 findet im Rahmen der FrOSCon 8 am <strong>24. und 25. August 2013</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
+          statt. Für nähere Infos möchten wir euch gerne auf die <a href="http://www.froscon.de/besucher/besucher/">offizielle FrOSCon Seite</a> verweisen.
         </p>
       </div>
     </div>
@@ -351,7 +355,7 @@
 
 <div class="map-container">
   <!-- google map code here -->
-  <iframe src="https://maps.google.de/maps?f=q&amp;source=s_q&amp;hl=de&amp;geocode=&amp;q=+Hochschule+Bonn-Rhein-Sieg&amp;aq=&amp;sll=50.957245,6.967322&amp;sspn=0.358126,0.593948&amp;ie=UTF8&amp;hq=Hochschule+Bonn-Rhein-Sieg&amp;t=m&amp;ll=50.780597,7.182312&amp;spn=0.018995,0.036478&amp;z=14&amp;iwloc=A&amp;output=embed">
+  <iframe src="http://maps.google.de/maps?f=q&amp;source=s_q&amp;hl=de&amp;geocode=&amp;q=+Hochschule+Bonn-Rhein-Sieg&amp;aq=&amp;sll=50.957245,6.967322&amp;sspn=0.358126,0.593948&amp;ie=UTF8&amp;hq=Hochschule+Bonn-Rhein-Sieg&amp;t=m&amp;ll=50.780597,7.182312&amp;spn=0.018995,0.036478&amp;z=14&amp;iwloc=A&amp;output=embed">
   </iframe>
   <!-- end google map code -->
 </div>
@@ -359,38 +363,12 @@
 <div class="container">
   <div class="row">
     <div class="span6 offset3">
-      <h4><i class="icon-suitcase"></i><strong>Our office</strong></h4>
-      <p>
-         Feel free to ask if you have any question regarding our schedule or if you just want to say Hello, we would love to hear from you.
-      </p>
-      <div class="dotted_line">
-      </div>
-      <p>
-        <strong>Vesperr Labs Inc</strong>
-      </p>
-      <p>
-        X123 Street, palm 05 ave Peterongan Semarang, Indonesia 50242
-      </p>
-      <p>
-        <span><i class="icon-phone"></i><strong>Phone:</strong> +6221 999 888 77 or +6221 999 888 66</span>
-      </p>
-      <p>
-        <span><i class="icon-comment"></i><strong>Skype:</strong> vesperr.location</span>
-      </p>
-      <p>
-        <span><i class="icon-envelope-alt"></i><strong>Email:</strong> info@yourdomainname.com</span>
-      </p>
-      <div class="dotted_line">
-      </div>
-      <h4><i class="icon-group"></i><strong>Connect to our social profiles</strong></h4>
-      <div class="social-links">
-        <ul class="social-links">
-          <li><a href="#" title="Twitter"><i class="icon-square icon-32 icon-twitter"></i></a></li>
-          <li><a href="#" title="Facebook"><i class="icon-square icon-32 icon-facebook"></i></a></li>
-          <li><a href="#" title="Google plus"><i class="icon-square icon-32 icon-google-plus"></i></a></li>
-          <li><a href="#" title="Linkedin"><i class="icon-square icon-32 icon-linkedin"></i></a></li>
-          <li><a href="#" title="Pinterest"><i class="icon-square icon-32 icon-pinterest"></i></a></li>
-        </ul>
+      <div class="sub-heading">
+        <p>
+          Falls ihr Fragen, Wünsche oder Anregungen habt, dann schickt uns doch einfach <a href="mailto:ruby@froscon.de">eine Mail</a>.
+          Für Neuigkeiten rund um die Konferenz folgt uns einfach auf Twitter unter <a
+            href="https://twitter.com/RedFrogConf">@RedFrogConf</a>.
+        </p>
       </div>
     </div>
   </div>
@@ -428,12 +406,8 @@
 <script src="js/parallax/jquery.parallax-1.1.3.js"></script>
 <script src="js/nagging-menu.js"></script>
 <script src="js/jquery.nav.js"></script>
-<script src="js/prettyPhoto/jquery.prettyPhoto.js"></script>
-<script src="js/portfolio/jquery.quicksand.js"></script>
-<script src="js/portfolio/setting.js"></script>
 <script src="js/hover/jquery-hover-effect.js"></script>
 <script src="js/jquery.scrollTo.js"></script>
-<script src="js/animate.js"></script>
 <script src="js/custom.js"></script>
 </body>
 </html>
