--- a/public/index.html
+++ b/public/index.html
@@ -77,21 +77,14 @@
         <h3><span>About us</span></h3>
       </div>
       <div class="sub-heading">
-
         <p>
-          Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you
-          can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like
-          you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+          Die RedFrog ist die Ruby Subkonferenz der Froscon 2013. Thematisch umfasst unsere Konferenz Ruby im weitesten Sinne:
+          Ob Rails oder Ruby Motion, ob JRuby oder Rubinius, Entwicklung oder Operations, Design Patterns oder Entwicklerkultur –
+          wir machen keine weiteren Vorgaben. Die Vorträge werden bevorzugt auf Deutsch gehalten, aber wir sind auch offen für
+          Vorträge auf Englisch. Da wir eine Subkonferenz sind, brauchst du nur
+          <a href="http://www.froscon.de/en/visitors/visitors">Eintritt bei der Froscon zu zahlen</a>
+          – wir verlangen keinen zusätzlichen Eintritt. Und natürlich kannst du auch an allen Talks der FrOSCon teilnehmen.
         </p>
-
-        <p>
-          My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go
-          someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the
-          kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you,
-          motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first
-          motherfucker to get shot. You understand?
-        </p>
-
       </div>
     </div>
   </div>
@@ -326,7 +319,27 @@
       </div>
       <div class="sub-heading">
         <p>
-           We have a history of doing what our name implies, creating a visual language around the beliefs of the brands we work with.
+          Eine Konferenz ist immer nur so gut wie ihre Vorträge. Und ein Vortrag immer nur so gut wie der Vortragende.
+          Wir brauchen also eure Unterstützung! Egal ob du Anfänger oder ein alter Hase bist, egal ob du dich mit
+          Webprogrammierung, der Anbindung von Banken oder Hausautomatisierung beschäftigst:
+          Wir freuen uns auf interessante Themen von interessanten Menschen. Du fühlst dich mit einem Workshop wohler?
+          Kein Problem, wir sind offen für kreative Einfälle.
+        </p>
+
+        <p>
+          Du bist dir nicht ganz sicher, ob du sprechen möchtest oder über was? Schreib uns einfach! Wir helfen und
+          ermutigen dich gerne :) Vielleicht hilft dir auch die wunderbare Seite
+          <a href="http://weareallaweso.me">We are all awesome</a>.
+        </p>
+
+        <p>
+        Unser Call for Proposals ist nun offiziell eröffnet und läuft bis zum <strong>15. Juli</strong>. Gib uns danach eine
+          Woche Zeit und wir werden dich darüber informieren, ob dein Proposal angenommen wurde oder nicht.
+          Unsere Slots sind jeweils eine Stunde – aber wir sind bei der Planung flexibel: Schreib uns einfach!
+        </p>
+
+        <p>
+        Bitte sende uns dein Proposal an <a href="mailto:ruby@froscon.org">ruby@froscon.org</a> – fühle dich frei dein Proposal so zu gestalten, wie du möchtest.
         </p>
       </div>
     </div>
