--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
       <div class="navigation">
         <nav>
         <ul class="nav pull-right">
-          <li class="current"><a href="#intro">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#schedule">Schedule</a></li>
-          <li><a href="#call-for-papers">Call for Papers</a></li>
-          <li><a href="#location">Location</a></li>
+          <li class="current"><a href="#intro">Intro</a></li>
+          <li><a href="#hintergrund">Hintergrund</a></li>
+          <li><a href="#programm">Programm</a></li>
+          <li><a href="#call-for-proposals">Call for Proposals</a></li>
+          <li><a href="#ort">Ort</a></li>
         </ul>
         </nav>
       </div>
@@ -68,13 +68,13 @@
 </section>
 <!-- end intro -->
 
-<!-- Section about -->
-<section id="about" class="section">
+<!-- Section hintergrund -->
+<section id="hintergrund" class="section">
 <div class="container">
   <div class="row">
     <div class="span12">
       <div class="heading">
-        <h3><span>About us</span></h3>
+        <h3><span>Hintergrund</span></h3>
       </div>
       <div class="sub-heading">
         <p>
@@ -90,15 +90,15 @@
   </div>
 </div>
 </section>
-<!-- end section about -->
+<!-- end section hintergrund -->
 
-<!-- section schedule -->
-<section id="schedule" class="section parallax dark">
+<!-- section programm -->
+<section id="programm" class="section parallax dark">
 <div class="container">
   <div class="row">
     <div class="span12">
       <div class="heading">
-        <h3><span>Schedule</span></h3>
+        <h3><span>Programm</span></h3>
       </div>
       <div class="sub-heading">
         <p>
@@ -307,17 +307,18 @@
 
 </div>
 </section>
-<!-- end section schedule -->
+<!-- end section programm -->
 
-<!-- section call-for-papers -->
-<section id="call-for-papers" class="section gray-bg">
+<!-- section call-for-proposals -->
+<section id="call-for-proposals" class="section gray-bg">
 <div class="container">
   <div class="row">
     <div class="span12">
       <div class="heading">
-        <h3><span>Call for Papers</span></h3>
+        <h3><span>Call for Proposals</span></h3>
       </div>
       <div class="sub-heading">
+
         <p>
           Eine Konferenz ist immer nur so gut wie ihre Vorträge. Und ein Vortrag immer nur so gut wie der Vortragende.
           Wir brauchen also eure Unterstützung! Egal ob du Anfänger oder ein alter Hase bist, egal ob du dich mit
@@ -346,15 +347,15 @@
   </div>
 </div>
 </section>
-<!-- section call-for-papers -->
+<!-- section call-for-proposals -->
 
-<!-- section location -->
-<section id="location" class="section">
+<!-- section ort -->
+<section id="ort" class="section">
 <div class="container">
   <div class="row">
     <div class="span12">
       <div class="heading">
-        <h3><span>location</span></h3>
+        <h3><span>Ort</span></h3>
       </div>
       <div class="sub-heading">
         <p>
@@ -378,7 +379,7 @@
     <div class="span6 offset3">
       <div class="sub-heading">
         <p>
-          Falls ihr Fragen, Wünsche oder Anregungen habt, dann schickt uns doch einfach <a href="mailto:ruby@froscon.de">eine Mail</a>.
+          Falls ihr Fragen, Wünsche oder Anregungen habt, dann schickt uns doch einfach <a href="mailto:ruby@froscon.org">eine Mail</a>.
           Für Neuigkeiten rund um die Konferenz folgt uns einfach auf Twitter unter <a
             href="https://twitter.com/RedFrogConf">@RedFrogConf</a>.
         </p>
@@ -387,7 +388,7 @@
   </div>
 </div>
 </section>
-<!-- end section location -->
+<!-- end section ort -->
 
 <footer>
 <div class="verybottom">
