CfP has been finished

--- a/public/index.html
+++ b/public/index.html
@@ -320,27 +320,20 @@
       <div class="sub-heading">
 
         <p>
-          Eine Konferenz ist immer nur so gut wie ihre Vorträge. Und ein Vortrag immer nur so gut wie der Vortragende.
-          Wir brauchen also eure Unterstützung! Egal ob du Anfänger oder ein alter Hase bist, egal ob du dich mit
-          Webprogrammierung, der Anbindung von Banken oder Hausautomatisierung beschäftigst:
-          Wir freuen uns auf interessante Themen von interessanten Menschen. Du fühlst dich mit einem Workshop wohler?
-          Kein Problem, wir sind offen für kreative Einfälle.
+          <blockquote class="twitter-tweet"><p>We finished selecting the amazing speakers :) All people that proposed: You will get an eMail tomorrow :)</p>&mdash; RedFrog Conf (@RedFrogConf)
+            <a href="https://twitter.com/RedFrogConf/statuses/358580632533733376">July 20, 2013</a>
+          </blockquote>
         </p>
 
         <p>
-          Du bist dir nicht ganz sicher, ob du sprechen möchtest oder über was? Schreib uns einfach! Wir helfen und
-          ermutigen dich gerne :) Vielleicht hilft dir auch die wunderbare Seite
-          <a href="http://weareallaweso.me">We are all awesome</a>.
+          <strong>Geschafft!</strong> – Vielen Dank an alle Einsendungen. Dank eurer zahlreichen Vorschläge konnten wir
+          unserer Meinung nach ein spannendes und abwechlsungsreiches Programm zusammenstellen. Sobald wir die
+          Zusammenfassungen für jeden Talk haben, sowie die Fotos und Kurz-Biographien werden wir das Programm hier
+          veröffentlichen. Zusätzlich wird es natürlich auch auf der <a href="http://programm.froscon.org/2013/">offizielle FrOSCon Seite erscheinen</a>.
         </p>
 
         <p>
-        Unser Call for Proposals ist nun offiziell eröffnet und läuft bis zum <strong>15. Juli</strong>. Gib uns danach eine
-          Woche Zeit und wir werden dich darüber informieren, ob dein Proposal angenommen wurde oder nicht.
-          Unsere Slots sind jeweils eine Stunde – aber wir sind bei der Planung flexibel: Schreib uns einfach!
-        </p>
-
-        <p>
-        Bitte sende uns dein Proposal an <a href="mailto:ruby@froscon.org">ruby@froscon.org</a> – fühle dich frei dein Proposal so zu gestalten, wie du möchtest.
+          Wir freuen uns auf eine spannende Konferenz!
         </p>
       </div>
     </div>
@@ -414,6 +407,7 @@
 <a href="#" class="scrollup"><i class="icon-chevron-up icon-square icon-48 active"></i></a>
 
 <!-- javascript -->
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery.easing.js"></script>
 <script src="js/bootstrap.js"></script>
