Center Aligned tweet

--- a/public/index.html
+++ b/public/index.html
@@ -317,14 +317,12 @@
       <div class="heading">
         <h3><span>Call for Proposals</span></h3>
       </div>
+
+      <blockquote class="twitter-tweet" align="center"><p>We finished selecting the amazing speakers :) All people that proposed: You will get an eMail tomorrow :)</p>&mdash; RedFrog Conf (@RedFrogConf)
+        <a href="https://twitter.com/RedFrogConf/statuses/358580632533733376">July 20, 2013</a>
+      </blockquote>
+
       <div class="sub-heading">
-
-        <p>
-          <blockquote class="twitter-tweet"><p>We finished selecting the amazing speakers :) All people that proposed: You will get an eMail tomorrow :)</p>&mdash; RedFrog Conf (@RedFrogConf)
-            <a href="https://twitter.com/RedFrogConf/statuses/358580632533733376">July 20, 2013</a>
-          </blockquote>
-        </p>
-
         <p>
           <strong>Geschafft!</strong> – Vielen Dank an alle Einsendungen. Dank eurer zahlreichen Vorschläge konnten wir
           unserer Meinung nach ein spannendes und abwechlsungsreiches Programm zusammenstellen. Sobald wir die
