added all the talks

--- a/public/index.html
+++ b/public/index.html
@@ -127,17 +127,27 @@
     <div class="span2">
       <div class="box aligncenter">
         <span class="timeslot">
-          10:30 - 11:00
+          10:00 - 11:00
         </span>
       </div>
     </div>
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Eröffnungsevent</strong></h4>
+          <h4><a href="/talks/weck-den-geek-in-dir"><strong>Weck den Geek in dir</strong></a></h4>
         </div>
         <p>
-          Nachdem offiziellen Start der FrOSCon werden wir gemeinsam die RedFrog Conf beginnen.
+          mit <em>Bodo Tasche</em> (Achtung, andere Startzeit: 10:30 - 11:00)
+        </p>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><a href="/talks/ruby-is-magic"><strong>Ruby is Magic</strong></a></h4>
+        </div>
+        <p>
+          mit <em>Dirk Breuer und Sebastian Cohne</em>
         </p>
       </div>
     </div>
@@ -155,17 +165,27 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #1</strong></h4>
+          <h4><a href="/talks/can-we-write-perfect-tests-maybe"><strong>Can we write perfect tests? - Maybe!</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>
+          mit <em>Markus Schirp</em>
+        </p>
+      </div>
+      <div class="box aligncenter">
+        <div class="halftop">
+          <h4><a href="/talks/sample-architecture-of-a-rails-b2b-plattform"><strong>Sample architecture of a Rails B2B-plattform</strong></a></h4>
+        </div>
+        <p>
+          mit <em>Benedikt Voigt</em>
+        </p>
       </div>
     </div>
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #6</strong></h4>
+          <h4><a href="/talks/concurrency-matters"><strong>Concurrency Matters</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Mateus Armando</em></p>
       </div>
     </div>
   </div>
@@ -198,17 +218,17 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #2</strong></h4>
+          <h4><a href="/talks/agil-von-kopf-bis-fuss"><strong>Agil von Kopf bis Fuß</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Daniel Lehmann</em></p>
       </div>
     </div>
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #7</strong></h4>
+          <h4><a href="/talks/testbarkeit-in-ruby"><strong>Testbarkeit in Ruby </strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Daniel Lehmann</em></p>
       </div>
     </div>
   </div>
@@ -225,17 +245,17 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #3</strong></h4>
+          <h4><a href="/talks/deployment-ohne-ziepen"><strong>Deployment ohne Ziepen</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Sebastian Schulze</em></p>
       </div>
     </div>
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #8</strong></h4>
+          <h4><a href="/talks/oo-ohne-vererbung"><strong>OO ohne Vererbung</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Lucas Dohmen</em></p>
       </div>
     </div>
   </div>
@@ -245,24 +265,24 @@
     <div class="span2">
       <div class="box aligncenter">
         <span class="timeslot">
-          15:15 - 16:15
+          16:30 - 17:30
         </span>
       </div>
     </div>
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #4</strong></h4>
+          <h4><a href="/talks/building-awesome-ruby-command-line-apps"><strong>Building Awesome Ruby Command Line Apps</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Christian Vervoorts</em></p>
       </div>
     </div>
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #9</strong></h4>
+          <h4><a href="/talks/the-fancy-programming-language"><strong>The Fancy Programming Language</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Christopher Bertels</em></p>
       </div>
     </div>
   </div>
@@ -279,9 +299,9 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><strong>Slot #5</strong></h4>
+          <h4><a href="/talks/true-false-cats-dogs-designer-entwickler"><strong>True &amp; False. Cats &amp; Dogs. Designer &amp; Entwickler?</strong></a></h4>
         </div>
-        <p>TBA</p>
+        <p>mit <em>Liane Thönnes und Tim Schneider</em></p>
       </div>
     </div>
   </div>
