--- a/public/index.html
+++ b/public/index.html
@@ -102,9 +102,8 @@
       </div>
       <div class="sub-heading">
         <p>
-          Hier könnt ihr schon mal sehen, welche Slots es auf der Konferenz geben wird. Wir richten uns im Grunde an die
-          Zeiten der FrOSCon und werden zu den allgemeinen Veranstaltungen kein Programm machen. Sobald die Talks
-          feststehen, werden wir die Themen hier natürlich eintragen.
+          Es ist vollbracht, wir haben alle Talks in unser Schedule gepackt. Wir glauben es sind tolle und vielfältige
+          Vorträge dabei. Wir hoffen, dass euch die Auswahl ebenso gut gefällt. Wir freuen uns auf zwei tolle Tage!
         </p>
       </div>
     </div>
