Fixed speaker name

--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@
         <div class="halftop">
           <h4><a href="/talks/testbarkeit-in-ruby"><strong>Testbarkeit in Ruby </strong></a></h4>
         </div>
-        <p>mit <em>Daniel Lehmann</em></p>
+        <p>mit <em>Eduard Litau</em></p>
       </div>
     </div>
   </div>
