Added name of speaker to detail page

--- a/public/talks/building-awesome-ruby-command-line-apps/index.html
+++ b/public/talks/building-awesome-ruby-command-line-apps/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Building Awesome Ruby Command Line Apps</span></h3>
         <h4>Tag 1, 16:30 - 17:30 – <em>Deutsch</em></h4>
+        <h5>Christian Vervoorts</h5>
       </div>
       <div class="sub-heading">
         <p>
