--- a/public/talks/ruby-is-magic/index.html
+++ b/public/talks/ruby-is-magic/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Ruby is Magic</span></h3>
         <h4>Tag 2, 10:00 - 11:00 – <em>Deutsch</em></h4>
+        <h5>Dirk Breuer und Sebastian Cohnen</h5>
       </div>
       <div class="sub-heading">
         <p>
