--- a/public/talks/sample-architecture-of-a-rails-b2b-plattform/index.html
+++ b/public/talks/sample-architecture-of-a-rails-b2b-plattform/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Sample architecture of a Rails B2B-plattform</span></h3>
         <h4>Tag 1, 11:45 - 12:15 – <em>Englisch</em></h4>
+        <h5>Benedikt Voigt</h5>
       </div>
       <div class="sub-heading">
         <p>
