--- a/public/talks/testbarkeit-in-ruby/index.html
+++ b/public/talks/testbarkeit-in-ruby/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Testbarkeit in Ruby</span></h3>
         <h4>Tag 2, 14:00 - 15:00 – <em>Deutsch</em></h4>
+        <h5>Eduard Litau</h5>
       </div>
       <div class="sub-heading">
         <p>
