--- a/public/talks/the-fancy-programming-language/index.html
+++ b/public/talks/the-fancy-programming-language/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>The Fancy Programming Language</span></h3>
         <h4>Tag 2, 16:30 - 17:30 – <em>Englisch</em></h4>
+        <h5>Christopher Bertels</h5>
       </div>
       <div class="sub-heading">
         <p>
