--- a/public/talks/true-false-cats-dogs-designer-entwickler/index.html
+++ b/public/talks/true-false-cats-dogs-designer-entwickler/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>True &amp; False. Cats &amp; Dogs. Designer &amp; Entwickler?</span></h3>
         <h4>Tag 1, 17:45 - 18:45 – <em>Deutsch</em></h4>
+        <h5>Liane Thönnes und Tim Schneider</h5>
       </div>
       <div class="sub-heading">
         <p>
