--- a/public/talks/weck-den-geek-in-dir/index.html
+++ b/public/talks/weck-den-geek-in-dir/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Weck den Geek in dir</span></h3>
         <h4>Tag 1, 10:30 - 11:00 – <em>Deutsch</em></h4>
+        <h5>Bodo Tasche</h5>
       </div>
       <div class="sub-heading">
         <p>
