--- a/public/talks/agil-von-kopf-bis-fuss/index.html
+++ b/public/talks/agil-von-kopf-bis-fuss/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Agil von Kopf bis Fuß</span></h3>
         <h4>Tag 1, 14:00 - 15:00 – <em>Deutsch</em></h4>
+        <h5>Daniel Lehmann</h5>
       </div>
       <div class="sub-heading">
         <p>
