--- a/public/talks/can-we-write-perfect-tests-maybe/index.html
+++ b/public/talks/can-we-write-perfect-tests-maybe/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Can we write perfect tests? - Maybe!</span></h3>
         <h4>Tag 1, 11.15 - 11:45 – <em>Englisch</em></h4>
+        <h5>Markus Schirp</h5>
       </div>
       <div class="sub-heading">
         <p>
