--- a/public/talks/concurrency-matters/index.html
+++ b/public/talks/concurrency-matters/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Concurrency Matters</span></h3>
         <h4>Tag 2, 11:15 - 12:15 – <em>Englisch</em></h4>
+        <h5>Mateus Armando</h5>
       </div>
       <div class="sub-heading">
         <p>
