--- a/public/talks/deployment-ohne-ziepen/index.html
+++ b/public/talks/deployment-ohne-ziepen/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>Deployment ohne Ziepen</span></h3>
         <h4>Tag 1, 15:15 - 16:15 – <em>Deutsch</em></h4>
+        <h5>Sebastian Schulze</h5>
       </div>
       <div class="sub-heading">
         <p>
