--- a/public/talks/oo-ohne-vererbung/index.html
+++ b/public/talks/oo-ohne-vererbung/index.html
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>OO ohne Vererbung</span></h3>
         <h4>Tag 2, 15:15 - 16:15 – <em>Deutsch</em></h4>
+        <h5>Lucas Dohmen</h5>
       </div>
       <div class="sub-heading">
         <p>
