--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
           <h4><a href="/talks/ruby-is-magic"><strong>Ruby is Magic</strong></a></h4>
         </div>
         <p>
-          mit <em>Dirk Breuer und Sebastian Cohne</em>
+          mit <em>Dirk Breuer und Sebastian Cohnen</em>
         </p>
       </div>
     </div>
