added links to videos from 2013 and changed wording a little bit

--- a/public/talks/agil-von-kopf-bis-fuss/index.html
+++ b/public/talks/agil-von-kopf-bis-fuss/index.html
@@ -75,6 +75,9 @@ In diesem Vortrag möchte ich zeigen, wie ich - und wie andere Entwickler
 - von dieser Erkenntnis profitieren können.
 
         </p>
+        <p>
+            Leider kein Video verfügbar.
+        </p>
       </div>
     </div>
   </div>
