--- a/public/talks/can-we-write-perfect-tests-maybe/index.html
+++ b/public/talks/can-we-write-perfect-tests-maybe/index.html
@@ -83,6 +83,9 @@ bugs where caught and how code became naturally streamlined.
 Lastly the current and future limits of existing mutation testing tools will be presented.
 
         </p>
+        <p>
+            Leider kein Video verfügbar.
+        </p>
       </div>
     </div>
   </div>
