--- a/public/talks/concurrency-matters/index.html
+++ b/public/talks/concurrency-matters/index.html
@@ -68,6 +68,9 @@ Shared Mutability - Isolated Mutability - Pure immutability  (e.g.: Functional p
 Concurrency - MRI - JRUBY - Rubinius - Rubymotion - Embrace Concurrency - Embrace Immutability
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-25_11:15_-_concurrency_matters_-_mateus_armando_-_1269.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
