--- a/public/talks/deployment-ohne-ziepen/index.html
+++ b/public/talks/deployment-ohne-ziepen/index.html
@@ -73,6 +73,9 @@ könnt ihr euch eine Deployment-Pipeline zurechtbiegen, auf die sogar
 Fowler stolz wäre.
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-24_15:15_-_deployment_ohne_ziepen_-_sebastian_schulze_-_1266.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
