--- a/public/talks/oo-ohne-vererbung/index.html
+++ b/public/talks/oo-ohne-vererbung/index.html
@@ -68,6 +68,9 @@ die Probleme von Vererbung eingehen mit einem starken Fokus auf die Testbarkeit 
 zeigen, wie man Vererbung umgehen kann und Fälle, in denen man wohl nicht um sie herumkommt.
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-25_15:15_-_oo_ohne_vererbung_-_lucas_dohmen_-_1271.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
