--- a/public/talks/ruby-is-magic/index.html
+++ b/public/talks/ruby-is-magic/index.html
@@ -73,6 +73,9 @@ vermeidet man besser? Wo finden sich diese Dinge im alltäglichen Gebrauch wiede
 Wie immer wird es eine bunte und unterhaltsame Darbietung werden.
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-25_10:00_-_ruby_is_magic_-_dirk_breuer_-_sebastian_cohnen_-_1262.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
