--- a/public/talks/sample-architecture-of-a-rails-b2b-plattform/index.html
+++ b/public/talks/sample-architecture-of-a-rails-b2b-plattform/index.html
@@ -68,6 +68,9 @@ Maschinendirigent.de is a software for farmers and the funny thing is, that both
 Therefore Ruby on Rails was the perfect choice.
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-24_11:45_-_sample_architecture_of_a_rails_b2b_platform_-_benedikt_voigt_-_1264.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
