--- a/public/talks/the-fancy-programming-language/index.html
+++ b/public/talks/the-fancy-programming-language/index.html
@@ -70,6 +70,9 @@ keyword-message syntax allows creating custom domain specific languages &amp; co
 examples and explain their implementation.
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-25_16:30_-_the_fancy_programming_language_-_christoph_bertels_-_1272.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
