--- a/public/talks/true-false-cats-dogs-designer-entwickler/index.html
+++ b/public/talks/true-false-cats-dogs-designer-entwickler/index.html
@@ -68,6 +68,9 @@ zusammenarbeiten zu lassen, ist noch schwieriger. In unserem Talk zeigen wir, wa
 wie uns auf diese Weise die besten Produkte gelingen.
 
         </p>
+        <p>
+            Leider kein Video verfügbar.
+        </p>
       </div>
     </div>
   </div>
