--- a/public/talks/weck-den-geek-in-dir/index.html
+++ b/public/talks/weck-den-geek-in-dir/index.html
@@ -69,6 +69,9 @@ nu? Und wieso sind hier so viele Fragen? Hoffentlich beantwortet die da mal jema
 an die Nerds denken hier?!
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-24_10:30_-_weck_den_geek_in_dir_-_bodo_tasche_-_1261.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
