--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="sub-heading">
         <p>
-          Die RedFrog ist die Ruby Subkonferenz der Froscon 2013. Thematisch umfasst unsere Konferenz Ruby im weitesten Sinne:
+          Die RedFrog ist die Ruby Subkonferenz der Froscon. Thematisch umfasst unsere Konferenz Ruby im weitesten Sinne:
           Ob Rails oder Ruby Motion, ob JRuby oder Rubinius, Entwicklung oder Operations, Design Patterns oder Entwicklerkultur –
           wir machen keine weiteren Vorgaben. Die Vorträge werden bevorzugt auf Deutsch gehalten, aber wir sind auch offen für
           Vorträge auf Englisch. Da wir eine Subkonferenz sind, brauchst du nur
@@ -102,8 +102,8 @@
       </div>
       <div class="sub-heading">
         <p>
-          Es ist vollbracht, wir haben alle Talks in unser Schedule gepackt. Wir glauben es sind tolle und vielfältige
-          Vorträge dabei. Wir hoffen, dass euch die Auswahl ebenso gut gefällt. Wir freuen uns auf zwei tolle Tage!
+          So, das war sie. Die RedFrog 2013. Für alle die nicht da waren, einen Talk verpasst haben, oder
+          nochmal sehen wollen, haben wir alle verfügbaren Videos verlinkt.
         </p>
       </div>
     </div>
@@ -369,7 +369,7 @@
       </div>
       <div class="sub-heading">
         <p>
-          Die RedFrog Conf 2013 findet im Rahmen der FrOSCon 8 am <strong>24. und 25. August 2013</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
+          Die RedFrog Conf 2013 fand im Rahmen der FrOSCon 8 am <strong>24. und 25. August 2013</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
           statt. Für nähere Infos möchten wir euch gerne auf die <a href="http://www.froscon.de/besucher/besucher/">offizielle FrOSCon Seite</a> verweisen.
         </p>
       </div>
