--- a/public/talks/building-awesome-ruby-command-line-apps/index.html
+++ b/public/talks/building-awesome-ruby-command-line-apps/index.html
@@ -69,6 +69,9 @@ einem viel Spaß bereiten und das Leben vereinfachen, wenn man Ruby als seinen P
 Command Line Apps&quot; ist das Ziel dieses Vortrags und am Ende werden auch alle verstehen wieso es das ist.
 
         </p>
+        <p>
+            <a href="http://media.ccc.de/browse/conferences/froscon/2013/hs6_-_2013-08-24_16:30_-_building_awesome_ruby_command_line_apps_-_christian_vervoorts_-_1267.html">Zum Video</a>
+        </p>
       </div>
     </div>
   </div>
