--- a/public/talks/testbarkeit-in-ruby/index.html
+++ b/public/talks/testbarkeit-in-ruby/index.html
@@ -70,6 +70,9 @@ Beispielen auf die Attribute von schwer testbarem und fehleranfälligem Ruby Cod
 Refactorings vor, um die Tests zu vereinfachen.
 
         </p>
+        <p>
+            Leider kein Video verfügbar.
+        </p>
       </div>
     </div>
   </div>
