CFP Text ändern (merge von Bodo

--- a/index.html
+++ b/index.html
@@ -147,7 +147,17 @@
         </p>
 
         <p>
-        Noch ist unser Call for Proposals nicht eröffnet. Das kommt aber bald!
+          Das Call for Proposals der RedFrogConf nutzt das System der Froscon. Bitte beachte aber, das
+          du den Track "RedFrogConf" auswählst, wenn du dein Proposal einreichst.
+        </p>
+        <p>
+          <a href="https://cfp.froscon.de/en/froscon2014/cfp/session/new">Jetzt dein Proposal einreichen</a>.
+        </p>
+        <p>
+          Und keine Bange wenn du eine Browser warnung siehst, das liegt an dem SSL-Zertifikat. Du
+          kannst diese Warnung ignorieren oder alternativ das CaCert Zertifikat auch in deinem
+          <a href="https://www.cacert.org/index.php?id=3">Browser installieren</a> um diesen Fehler nie
+          wieder zu sehen.
         </p>
       </div>
     </div>
