CfP vorbei, CoC verlinken

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         <a href="http://www.froscon.de/en/visitors/visitors">Eintritt bei der Froscon zu zahlen</a>
         – wir verlangen keinen zusätzlichen Eintritt. Und natürlich kannst du auch an allen Angeboten und Vorträgen der FrOSCon teilnehmen.
         </p>
+        <p>
+        Auf der RedFrog gilt der <a target="_blank" href="http://www.froscon.de/coc/">FrOSCon Verhaltenskodex</a>.
+        </p>
       </div>
     </div>
   </div>
@@ -132,33 +135,7 @@
       </div>
 
       <div class="sub-heading">
-        <p>
-        Eine Konferenz ist immer nur so gut wie ihre Vorträge. Und ein Vortrag immer nur so gut wie der Vortragende.
-        Wir brauchen also eure Unterstützung! Egal ob du Anfänger oder ein alter Hase bist, egal ob du dich mit
-        Webprogrammierung, der Anbindung von Banken oder Hausautomatisierung beschäftigst:
-        Wir freuen uns auf interessante Themen von interessanten Menschen. Du fühlst dich mit einem Workshop wohler?
-        Kein Problem, wir sind offen für kreative Einfälle.
-        </p>
-
-        <p>
-        Du bist dir nicht ganz sicher, ob du sprechen möchtest oder über was? Schreib uns einfach! Wir helfen und
-        ermutigen dich gerne :) Vielleicht hilft dir auch die wunderbare Seite
-        <a href="http://weareallaweso.me">We are all awesome</a>
-        </p>
-
-        <p>
-          Das Call for Proposals der RedFrogConf nutzt das System der Froscon. Bitte beachte aber, das
-          du den Track "RedFrogConf" auswählst, wenn du dein Proposal einreichst.
-        </p>
-        <p>
-          <a href="https://cfp.froscon.de/en/froscon2014/cfp/session/new">Jetzt dein Proposal einreichen</a>.
-        </p>
-        <p>
-          Und keine Bange wenn du eine Browser warnung siehst, das liegt an dem SSL-Zertifikat. Du
-          kannst diese Warnung ignorieren oder alternativ das CaCert Zertifikat auch in deinem
-          <a href="https://www.cacert.org/index.php?id=3">Browser installieren</a> um diesen Fehler nie
-          wieder zu sehen.
-        </p>
+        <p>Der CfP ist nun beendet. Bald verkünden wir das Programm!</p>
       </div>
     </div>
   </div>
