Added pictures for speakers

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
           <div class="halftop">
             <h4><strong>Not being an asshole is not enough</strong></h4>
           </div>
+          <img class="speaker" src="speakers/ellen.png" alt="Ellen König"/>
           <p>mit <em>Ellen König</em></p>
         </div>
       </div>
@@ -171,6 +172,7 @@
           <div class="halftop">
             <h4><strong>Ruby MVC from scratch with Rack</strong></h4>
           </div>
+          <img class="speaker" src="speakers/marco.png" alt="Marco Schaden"/>
           <p>mit <em>Marco Schaden</em></p>
         </div>
       </div>
@@ -179,6 +181,7 @@
           <div class="halftop">
             <h4><strong>Code Padawans</strong></h4>
           </div>
+          <img class="speaker" src="speakers/ute+magda.png" alt="Ute Mayer und Magdalena Frankiewicz"/>
           <p>mit <em>Ute Mayer und Magdalena Frankiewicz</em></p>
         </div>
       </div>
@@ -198,7 +201,8 @@
           <div class="halftop">
             <h4><strong>Testbarkeit in Ruby</strong></h4>
           </div>
-          <p>mit <em>Ede</em></p>
+          <img class="speaker" src="speakers/anon.png" alt="Ede Litau"/>
+          <p>mit <em>Ede Litau</em></p>
         </div>
       </div>
       <div class="span5">
@@ -206,6 +210,7 @@
           <div class="halftop">
             <h4><strong>JRuby, a Pi and some Java Database</strong></h4>
           </div>
+          <img class="speaker" src="speakers/phil.png" alt="Phil Fehre"/>
           <p>mit <em>Phil Fehre</em></p>
         </div>
       </div>
@@ -249,6 +254,7 @@
           <div class="halftop">
             <h4><strong>A revolutionary idea: why not use a job queue system for your job queue?</strong></h4>
           </div>
+          <img class="speaker" src="speakers/bodo.png" alt="Bodo Tasche"/>
           <p>mit <em>Bodo Tasche</em></p>
         </div>
       </div>
@@ -276,6 +282,7 @@
           <div class="halftop">
             <h4><strong>Datenbank-Release-Management mit PostgreSQL und Ruby-on-Rails</strong></h4>
           </div>
+          <img class="speaker" src="speakers/frank.png" alt="Frank Lancaster"/>
           <p>mit <em>Frank Lancaster</em></p>
         </div>
       </div>
@@ -303,6 +310,7 @@
           <div class="halftop">
             <h4><strong>Frab</strong></h4>
           </div>
+          <img class="speaker" src="speakers/anon.png" alt="Mario Manno"/>
           <p>mit <em>Mario Manno</em></p>
         </div>
       </div>
@@ -330,6 +338,7 @@
           <div class="halftop">
             <h4><strong>How to make Guacamole?</strong></h4>
           </div>
+          <img class="speaker" src="speakers/dirk.png" alt="Dirk Breuer"/>
           <p>mit <em>Dirk Breuer</em></p>
         </div>
       </div>
