Title for @railsbros-dirk adjusted

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       <div class="span5">
         <div class="box aligncenter">
           <div class="halftop">
-            <h4><strong>How to make Guacamole?</strong></h4>
+            <h4><strong>How to make Guacamole, an Object Document Mapper</strong></h4>
           </div>
           <img class="speaker" src="speakers/dirk.png" alt="Dirk Breuer"/>
           <p>mit <em>Dirk Breuer</em></p>
