Adjusted Code_Padawan's description

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="span5">
         <div class="box aligncenter">
           <div class="halftop">
-            <h4><strong>Code Padawans</strong></h4>
+            <h4><strong>A Summer full of Code - The Code_Padawans journey through Rails Girls Summer of Code</strong></h4>
           </div>
           <img class="speaker" src="speakers/ute+magda.png" alt="Ute Mayer und Magdalena Frankiewicz"/>
           <p>mit <em>Ute Mayer und Magdalena Frankiewicz</em></p>
