Renamed Mario Manno to mm

--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
           <div class="halftop">
             <h4><strong>Frab</strong></h4>
           </div>
-          <img class="speaker" src="speakers/anon.png" alt="Mario Manno"/>
-          <p>mit <em>Mario Manno</em></p>
+          <img class="speaker" src="speakers/anon.png" alt="mm"/>
+          <p>mit <em>mm</em></p>
         </div>
       </div>
     </div>
